--- a/css/style.css
+++ b/css/style.css
@@ -1010,6 +1010,13 @@ input[type=range]::-ms-track {
         padding: 26vw 0 0;
     }
     .agile_banner.bg1 {
+	     background: url(../images/WhatsApp\ Image\ 2024-02-18\ at\ 15.19.27_0b29e398.jpg) center no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
         background-position: right;
     }
 }
