--- a/css/style.css
+++ b/css/style.css
@@ -1010,7 +1010,7 @@ input[type=range]::-ms-track {
         padding: 26vw 0 0;
     }
     .agile_banner.bg1 {
-	     background: url(../images/kn.jpg) center no-repeat;
+	     background: url(../images/jpg_20240219_112456_0000.jpg) center no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
